<resources>
    <string name="app_name">Navjivan Delivery</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ruppee">&#8377;</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_address">AddAddress</string>

    <string name="title_activity_update_address">UpdateAddress</string>
    <string name="title_activity_offerlist">OfferList</string>

    <string name="accept_icon">&#10003;</string>
    <string name="cancel_icon">&#10005;</string>

    <string name="feedback">Feedback</string>
    <string name="feedback_subject">Feedback of Navjivan Food Order</string>
    <string name="feedback_email">sendtomitesh@gmail.com</string>

    <string name="about_feedback"><a href="mailto:sendtomitesh@gmail.com">Send suggestions or feedback</a></string>
    <string name="about_email_friend"><a href="mailto:">Email a friend</a></string>
    <string name="share_app"><a href="">Share App</a></string>
    <string name="copyright">Copyright 2015 - Virtual Software Solutions,vapi. All Rights Reserved</string>
    <string name="about_developed_by">Developed by</string>


    <string name="app_link">https://play.google.com/store/apps/details?id=vs2.navjivanclient</string>
    <string name="navijivan_timings">Service Time \n 11.00 AM - 4.00 PM \n 7:00 PM - 11:00 PM</string>
    <string name="navjivan_address">Padmavati Complex, Opp. 21 Century Hospital, National highway No. 8, G.I.D.C, Vapi - 396195. Telephone : 0260 - 2401666 / 9898608579</string>

</resources>
